misc: 调整UpdateHandler、使CatWatcher遇到未知变种时从ValueIndex返回默认值